fix layout on small screens

--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ canvas {
 	right: 0;
 }
 
+@media screen and (orientation: portrait) {
+  canvas {
+    max-width: 100%
+  }
+}
+
+@media screen and (orientation: landscape) {
+  canvas {
+    max-height: 100%;
+  }
+}
+
 @font-face {
 	font-family: 'dysin4mation';
 	src: 
